squelette html added

--- a/recipes/templates/recipes/dashboard.html
+++ b/recipes/templates/recipes/dashboard.html
@@ -1,1 +1,6 @@
-dashboard html
+{% extends "recipes/base.html" %}
+
+{% block content %}
+<h1>Tableau de bord</h1>
+<p>Liste interne des recettes avec gestion (ajout, modif, suppression).</p>
+{% endblock %}
