--- a/recipes/templates/recipes/recipe_confirm_delete.html
+++ b/recipes/templates/recipes/recipe_confirm_delete.html
@@ -1,1 +1,11 @@
-recipe confir delete html
+{% extends "recipes/base.html" %}
+
+{% block content %}
+<h1>Supprimer une recette</h1>
+<p>Êtes-vous sûr de vouloir supprimer cette recette ?</p>
+<form method="post">
+    {% csrf_token %}
+    <button type="submit">Oui, supprimer</button>
+    <a href="{% url 'dashboard' %}">Annuler</a>
+</form>
+{% endblock %}
