--- a/recipes/templates/recipes/recipe_detail.html
+++ b/recipes/templates/recipes/recipe_detail.html
@@ -1,1 +1,6 @@
-recipe detail html
+{% extends "recipes/base.html" %}
+
+{% block content %}
+<h1>Détail d’une recette</h1>
+<p>Ici seront affichés : image, description, ingrédients et étapes.</p>
+{% endblock %}
