--- a/recipes/templates/recipes/recipe_list.html
+++ b/recipes/templates/recipes/recipe_list.html
@@ -1,1 +1,6 @@
-recipe list html
+{% extends "recipes/base.html" %}
+
+{% block content %}
+<h1>Liste des recettes</h1>
+<p>Ici s’afficheront toutes les recettes avec recherche et filtres.</p>
+{% endblock %}
