--- a/recipes/templates/recipes/base.html
+++ b/recipes/templates/recipes/base.html
@@ -1,1 +1,34 @@
-base html
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Cuisinothèque</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    {# CSS global plus tard #}
+    <link rel="stylesheet" href="{% static 'recipes/css/style.css' %}">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="{% url 'home' %}">Accueil</a></li>
+                <li><a href="{% url 'recipe_list' %}">Recettes</a></li>
+                <li><a href="{% url 'recipe_create' %}">Ajouter</a></li>
+                <li><a href="{% url 'dashboard' %}">Tableau de bord</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        {% block content %}
+        <!-- contenu des pages -->
+        {% endblock %}
+    </main>
+
+    <footer>
+        <p>© 2025 Cuisinothèque</p>
+    </footer>
+    <script src="{% static 'recipes/js/animations.js' %}"></script>
+</body>
+</html>
