--- a/recipes/templates/recipes/base.html
+++ b/recipes/templates/recipes/base.html
@@ -5,7 +5,7 @@
     <title>Cuisinothèque</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    {# CSS global plus tard #}
+    {% load static %}
     <link rel="stylesheet" href="{% static 'recipes/css/style.css' %}">
 </head>
 <body>
@@ -29,6 +29,7 @@
     <footer>
         <p>© 2025 Cuisinothèque</p>
     </footer>
+
     <script src="{% static 'recipes/js/animations.js' %}"></script>
 </body>
 </html>
