feat: first working recipe creation flow with sections, ingredients and steps

--- a/recipes/templates/recipes/base.html
+++ b/recipes/templates/recipes/base.html
@@ -109,5 +109,6 @@
 
     <!-- JS -->
     <script src="{% static 'recipes/js/animations.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'recipes/css/recipe_form.css' %}" />
   </body>
 </html>
