feat(recipes): implement recipe list page with search and responsive layout

--- a/recipes/templates/recipes/base.html
+++ b/recipes/templates/recipes/base.html
@@ -36,8 +36,12 @@
         } catch (e) {}
       })();
     </script>
-
-    <link rel="stylesheet" href="{% static 'recipes/css/style.css' %}" />
+    
+    <!-- CSS -->
+    <link rel="stylesheet" href="{% static 'recipes/css/style.css' %}"/>
+    <link rel="stylesheet" href="{% static 'recipes/css/recipe_form.css' %}"/>
+    <link rel="stylesheet" href="{% static 'recipes/css/recipe_list.css' %}"/>
+    {% block extra_css %}{% endblock %}
   </head>
 
   <body>
@@ -109,6 +113,5 @@
 
     <!-- JS -->
     <script src="{% static 'recipes/js/animations.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'recipes/css/recipe_form.css' %}" />
   </body>
 </html>
