feat(recipes): implement recipe detail page with sections, ingredients and steps

--- a/recipes/templates/recipes/base.html
+++ b/recipes/templates/recipes/base.html
@@ -41,6 +41,7 @@
     <link rel="stylesheet" href="{% static 'recipes/css/style.css' %}"/>
     <link rel="stylesheet" href="{% static 'recipes/css/recipe_form.css' %}"/>
     <link rel="stylesheet" href="{% static 'recipes/css/recipe_list.css' %}"/>
+    <link rel="stylesheet" href="{% static 'recipes/css/recipe_detail.css' %}">
     {% block extra_css %}{% endblock %}
   </head>
 
