--- a/recipes/templates/recipes/recipe_form.html
+++ b/recipes/templates/recipes/recipe_form.html
@@ -1,6 +1,4 @@
-{% extends "recipes/base.html" %} {% load static %} {% block title %}Ajouter une
-recette — Cuisinothèque{% endblock %} {% block content %}
-
+{% extends "recipes/base.html" %} {% load static %} {% block content %}
 
 <section class="container recipe-form-page">
   <header class="recipe-form-header">
