--- a/recipes/templates/recipes/recipe_list.html
+++ b/recipes/templates/recipes/recipe_list.html
@@ -1,4 +1,4 @@
-{% extends "recipes/base.html" %} {% load static %} {% block content %}
+{% extends "recipes/base.html" %} {% block content %}
 <div class="container recipe-list">
   <h1 class="recipe-list__title">Liste des recettes</h1>
 
